Misc tweaks and additions, @RyanTheAllmighty check my additions let me know if you like them