@@ -3,16 +3,8 @@ package com.atlauncher.data;
 import com.atlauncher.App;
 import com.atlauncher.LogManager;
 import com.atlauncher.gui.components.CollapsiblePanel;
-import com.atlauncher.utils.Base64;
 import com.atlauncher.utils.Utils;
 
-import javax.swing.BorderFactory;
-import javax.swing.JButton;
-import javax.swing.JDialog;
-import javax.swing.JFileChooser;
-import javax.swing.JLabel;
-import javax.swing.JOptionPane;
-import javax.swing.SwingConstants;
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
@@ -22,6 +14,14 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import javax.swing.BorderFactory;
+import javax.swing.JButton;
+import javax.swing.JDialog;
+import javax.swing.JFileChooser;
+import javax.swing.JLabel;
+import javax.swing.JOptionPane;
+import javax.swing.SwingConstants;
+import javax.xml.bind.DatatypeConverter;
 
 /**
  * @author Kihira
@@ -55,7 +55,7 @@ public class DropboxSync extends SyncAbstract {
                 String line;
                 File dropboxLoc = null;
                 while ((line = bufferedReader.readLine()) != null) {
-                    dropboxLoc = new File(new String(Base64.decode(line)));
+                    dropboxLoc = new File(new String(DatatypeConverter.parseBase64Binary(line)));
                     if (dropboxLoc.exists()) {
                         break;
                     }
